added images for work section

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <h2 class="projects-section-header">These are some of my projects</h2>
 
         <div class="projects-grid">
-            <a href="https://codepen.io/freeCodeCamp/full/zNqgVx" target="_blank" class="project project-tile">
+            <a href="https://marykathryn0.github.io/tribute-to-cats/" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tribute.jpg"
+                    src="./imgs/tribute-page-ss.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
@@ -80,23 +80,23 @@
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/qRZeGZ" target="_blank" class="project project-tile">
+            <a href="https://marykathryn0.github.io/survey-form/" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/random-quote-machine.png"
+                    src="./imgs/survey-form-ss.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Random Quote Machine
+                    Survey Template
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/wgGVVX" target="_blank" class="project project-tile">
+            <a href="https://marykathryn0.github.io/technical-documentation/." target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/calc.png"
+                    src="imgs/Technical-doc-ss.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    JavaScript Calculator
+                    Technical Documentation Template
                     <span class="code">/&gt;</span>
                 </p>
             </a>
