--- a/index.html
+++ b/index.html
@@ -100,33 +100,33 @@
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/mVEJag" target="_blank" class="project project-tile">
+            <a href="https://marykathryn0.github.io/product-landing-page/" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/map.jpg"
+                    src="imgs/product-landing-ss.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Map Data Across the Globe
+                    Product Landing Page
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/wGqEga" target="_blank" class="project project-tile">
+            <a href="https://github.com/MaryKathryn0/spookiSushi" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/wiki.png"
+                    src="https://raw.githubusercontent.com/MaryKathryn0/spookiSushi/master/public/imgs/Home-Page.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Wikipedia Viewer
+                    Restaurant Reservation Page
                     <span class="code">/&gt;</span>
                 </p>
             </a>
-            <a href="https://codepen.io/freeCodeCamp/full/KzXQgy" target="_blank" class="project project-tile">
+            <a href="https://github.com/AdvenSure/AdvenSure" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="https://raw.githubusercontent.com/freeCodeCamp/cdn/master/build/testable-projects-fcc/images/tic-tac-toe.png"
+                    src="https://github.com/AdvenSure/AdvenSure/blob/main/advensureSS.png?raw=true"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
-                    Tic Tac Toe Game
+                    Travel Packing Page 
                     <span class="code">/&gt;</span>
                 </p>
             </a>
@@ -146,14 +146,12 @@
             <p>How do you take your coffee?</p>
         </div>
         <div class="contact-links">
-            <a href="https://facebook.com/freecodecamp" target="_blank" class="btn contact-details"><i
-                    class="fab fa-facebook-square"></i> Facebook</a>
-            <a id="profile-link" href="https://github.com/freecodecamp" target="_blank" class="btn contact-details"><i
+
+            <a id="profile-link" href="https://github.com/MaryKathryn0" target="_blank" class="btn contact-details"><i
                     class="fab fa-github"></i> GitHub</a>
-            <a href="https://twitter.com/freecodecamp" target="_blank" class="btn contact-details"><i
-                    class="fab fa-twitter"></i> Twitter</a>
-            <a href="mailto:example@example.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
-            <a href="tel:555-555-5555" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
+
+            <a href="mailto:msmarykathrynholt@gmail.com" class="btn contact-details"><i class="fas fa-at"></i> Send a mail</a>
+            <a href="tel:518-414-9035" class="btn contact-details"><i class="fas fa-mobile-alt"></i> Call me</a>
         </div>
     </section>
 
