--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </a>
             <a href="https://marykathryn0.github.io/survey-form/" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="./imgs/survey-form-ss.png"
+                    src="https://github.com/MaryKathryn0/survey-form/blob/main/imgs/surveryscreenshot.png?raw=true"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
@@ -92,7 +92,7 @@
             </a>
             <a href="https://marykathryn0.github.io/technical-documentation/." target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="imgs/Technical-doc-ss.png"
+                    src="https://github.com/MaryKathryn0/technical-documentation/raw/main/imgs/Technical-doc-ss.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
@@ -102,7 +102,7 @@
             </a>
             <a href="https://marykathryn0.github.io/product-landing-page/" target="_blank" class="project project-tile">
                 <img class="project-image"
-                    src="imgs/product-landing-ss.png"
+                    src="https://github.com/MaryKathryn0/product-landing-page/raw/main/imgs/product-landing-ss.png"
                     alt="project">
                 <p class="project-title">
                     <span class="code">&lt;</span>
